kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictactoe
  labels:
    app: tictactoe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tictactoe
  template:
    metadata:
      labels:
        app: tictactoe
      spec:
        containers:
        - name: tictactoe
          image:  ghcr.io/iam-veeramalla/devsecops-demo:sha-fb64dc2ac8cd8d79ad4a75c58326596b59eaf402
        # Image will be automatically updated by CI/CD pipeline

          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
            
          livelinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

        imagePullSecrets:
        - name: github-container-registry
