kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tictactoe
  labels:
    app: tictactoe
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tictactoe
