kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: tictactoe.pks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tictactoe
            port:
              number: 80
